[package]
name = "supertokens-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = "1"
serde_json = "1"
url = "2"


[features]
default = ["session"]
passwordless = []
emailpassword = []
social = []
phone = []
session = []
emailverification = []